--- a/src/web/templates/home.html
+++ b/src/web/templates/home.html
@@ -2,15 +2,30 @@
 <html>
 <head>
     <title>Projeto BDInt da Fatec</title>
+
+    <link type="text/css" rel="stylesheet" href="/static/css/base.css" />
+
 </head>
 <body>
 <div id="header"> <h1>Home Page</h1></div>
 <div id="content"><p>Primeiro Parágrafo.<br />
-    Essa é outra <span style="color: red;">linha vermelha</span> texto depois do span
+    Essa é outra <span >linha vermelha</span> texto depois do <span>Vermelho</span>
 </p>
 <a href="/ola">Index - abrir na mesma página</a></div>
 <a href="/ola/world" target="_blank">World - abrir em outra aba</a></div>
-<img src="/static/img/python_64.png" ></img>
-<div id="footer">Rodapé</div>
+<img src="/static/img/python_64.png" class="border" ></img>
+
+<table >
+    <thead>
+    <tr ><th >Nome</th><th>idade</th></tr>
+    </thead>
+    <tbody>
+    <tr><td>Renzo</td><td>30</td></tr>
+    <tr><td>Lessa</td><td>20</td></tr>
+    <tr><td>Shen</td><td>13</td></tr>
+    </tbody>
+
+</table>
+<div id="footer" class="border">Rodapé</div>
 </body>
 </html>
