aula 05 - Finalizando JQuery

--- a/src/web/templates/home.html
+++ b/src/web/templates/home.html
@@ -32,9 +32,12 @@
  </div>
 
     <div class="row">
-        <div class="span2"><input id="in" type="text" /><button id="enviar" class="btn-success">Enviar Msg</button></div>
-        <div class="span5"><div id="msg"></div></div>
-        <div class="span4"><h2>4 colunas no meio</h2></div>
+        <div class="span6"><input id="in" type="text" />
+            <button id="enviar" class="btn-success">Enviar Msg</button>
+            <img  id="loader" src="/static/img/blueloader.gif" />
+        </div>
+        <div class="span6"><div id="msg"></div></div>
+
     </div>
     <div class="row">
         <div class="span6 offset3">
