--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -16,7 +16,7 @@
         <a href="" class="brand">Postal</a>
         <ul class="nav">
             <li {% if selected_tab=="HOME" %}class="active" {% endif %}><a href="/">Home</a></li>
-            <li {% if selected_tab=="FORM" %}class="active" {% endif %} ><a href="/formulario">Formulário</a></li>
+            <li {% if selected_tab=="FORM" %}class="active" {% endif %} ><a href="/geo/estado/form">Formulário</a></li>
             <li {% if selected_tab=="TABLE" %}class="active" {% endif %} ><a href="/tabela">Tabela</a></li>
         </ul>
     </div>
