aula 09 - paginacao com offset

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -17,6 +17,7 @@
         <ul class="nav">
             <li {% if selected_tab=="HOME" %}class="active" {% endif %}><a href="/">Home</a></li>
             <li {% if selected_tab=="FORM" %}class="active" {% endif %} ><a href="/geo/estado/form">Formulário</a></li>
+            <li {% if selected_tab=="TONW" %}class="active" {% endif %} ><a href="/geo/cidade/form">Formulário de Cidade</a></li>
             <li {% if selected_tab=="TABLE" %}class="active" {% endif %} ><a href="/tabela">Tabela</a></li>
         </ul>
     </div>
